--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
     <div class="container">
         <div class="d-flex align-items-center justify-content-between my-3">
-            <a class="fs-md fw-xxl fm-poppins text-color-1" href="#">Rev<span class="text-color-2 fw-xxl">.</span></a>
+            <a class="fs-md fw-xxl fm-poppins text-color-1" href="#">Rev<span><svg width="99" height="35"
+                        viewBox="90 2 99 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                       
+                        <path d="M98.4505 25.792V34H89.9545V25.792H98.4505Z" fill="#F1875E" />
+                    </svg>
+                </span></a>
             <div class="d-flex flex-column text-end">
                 <a class="fs-sm fw-xxl fm-poppins text-color-1" href="#">My Designs</a>
                 <a class="fs-sm fw-xxl fm-poppins text-color-1" href="#">About me</a>
