--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="fs-sm fw-xxl fm-poppins text-color-1" href="#">About me</a>
             </div>
         </div>
-        <h1 class="text-center fm-poppins fw-xxl fs-lg text-color-3 my-5">Design Dump!!!</h1>
+        <h1 class="text-center fm-poppins fw-xxl fs-lg text-color-3 py-5 mb-5">Design Dump!!!</h1>
         <div class="grid-container my-3">
             <div class="grid-item-1">
                 <img class="w-100 h-100" src="/assets/img/png/grid-img-1.png" alt="img-gallery">
